Implement revoke token for OIDC authentication #449 (#450)
* Implement revoke token for OIDC authentication #449

* Implement revoke token for OIDC authentication #449

- Fix typo

* Implement revoke token for OIDC authentication #449

- add suggestion from coderabbit

* Implement revoke token for OIDC authentication #449

- add cache and fix race condition
- Claim azp should be optional

* Implement revoke token for OIDC authentication #449

- Initialization of cache should be using sysconfig from system only
- Added timeout for http operations
- Added verification of alg claim

* Implement revoke token for OIDC authentication #449

- added null checking as suggested by coderabbitai

* Implement revoke token for OIDC authentication #449

- Merge patch from Carlos Ruiz

* Implement revoke token for OIDC authentication #449

- add NPE check as suggested by coderabbit