@@ -40,6 +40,7 @@ import java.util.Properties;
 
 import javax.ws.rs.container.ContainerRequestContext;
 
+import org.compiere.model.MSession;
 import org.compiere.model.MSysConfig;
 import org.compiere.model.MWarehouse;
 import org.compiere.model.PO;
@@ -76,7 +77,15 @@ public class MOIDCService extends X_REST_OIDCService implements ImmutablePOSuppo
 
 	private static ImmutablePOCache<String, MOIDCService> s_issuerCache = new ImmutablePOCache<>(Table_Name, 10);
 	
-	private static CCache<String, AuthenticatedUser> s_authCache = new CCache<>("AuthenticatedUser_Cache", 40, MSysConfig.getIntValue("REST_TOKEN_EXPIRE_IN_MINUTES", 60, Env.getAD_Client_ID(Env.getCtx())));
+	private static CCache<String, AuthenticatedUser> s_authCache = new CCache<>("AuthenticatedUser_Cache", 40, 
+			MSysConfig.getIntValue("REST_TOKEN_EXPIRE_IN_MINUTES", 60));
+	
+	// revoke cache should live longer than auth cache
+	private static CCache<String, Boolean> s_revokeCache = new CCache<>("Revoke_Token_Cache", 40, 
+			MSysConfig.getIntValue("REST_TOKEN_EXPIRE_IN_MINUTES", 60)*2);
+
+	// 24 hour cache for JwkProvider
+	private static CCache<String, JwkProvider> s_jwkProviderCache = new CCache<>("OIDC_JwkProvider_Cache", 20, 1440);
 
 	/** HTTP header for AD_Role.Name */
 	public static final String ROLE_HEADER = "X-ID-Role";
@@ -196,13 +205,12 @@ public class MOIDCService extends X_REST_OIDCService implements ImmutablePOSuppo
 		
 		Claim iss = decoded.getClaim("iss");
 		Claim aud = decoded.getClaim("aud");
-		Claim azp = decoded.getClaim("azp");
 		
 		Claim client_id = decoded.getClaim("client_id");
 		
 		MOIDCService service = null;
 		if (isWithStringValue(alg) && isWithStringValue(typ) && "JWT".equals(typ.asString()) && isWithStringValue(kid) &&
-			isWithStringValue(iss) && isWithStringValue(aud) && isWithStringValue(azp)) {
+			isWithStringValue(iss) && isWithStringValue(aud)) {
 			service = fromIssuerAndAudience(iss.asString(), aud.asString());
 			if (service == null)
 				throw new JWTVerificationException("No matching OpenID Connect service configuration for access token");			
@@ -228,6 +236,11 @@ public class MOIDCService extends X_REST_OIDCService implements ImmutablePOSuppo
 	 * @param requestContext
 	 */
 	public void validateAccessToken(String token, ContainerRequestContext requestContext) {
+		// first check if token is revoked
+		if (s_revokeCache.containsKey(token)) {
+			throw new JWTVerificationException("Token has been revoked");
+		}
+		
 		AuthenticatedUser authenticatedUser = s_authCache.get(token);
 		if (authenticatedUser != null) {
 			processAuthenticatedUser(requestContext, authenticatedUser);
@@ -255,6 +268,9 @@ public class MOIDCService extends X_REST_OIDCService implements ImmutablePOSuppo
 		
 		//get user, role, tenant and org
 		authenticatedUser = service.getAuthenticatedUser(decodedJwt, requestContext, this);
+		if (s_revokeCache.containsKey(token)) {
+			throw new JWTVerificationException("Token has been revoked");
+		}
 		s_authCache.put(token, authenticatedUser);
 		
 		processAuthenticatedUser(requestContext, authenticatedUser);
@@ -316,57 +332,87 @@ public class MOIDCService extends X_REST_OIDCService implements ImmutablePOSuppo
 	}
 	
 	private DecodedJWT getDecodedJWT(String token) {
-		//get jwks from openid configuration endpoint
-		String jwksUrl = null;
 		String wellKnownUrl = getOIDC_ConfigurationURL();
-        HttpClient httpClient = HttpClient.newBuilder().build();
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(wellKnownUrl))
-                .GET()
-                .build();
-
-        try {
-            HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
-
-            // Parse the JSON response
-            JsonObject json = new Gson().fromJson(response.body(), JsonObject.class);
-
-            // Extract the JWKS URL
-            jwksUrl = json.get("jwks_uri").getAsString();
-        } catch (IOException | InterruptedException e) {
-            throw new RuntimeException(e);            
-        }
-        
-        DecodedJWT decodedJwt = null;
-        if (jwksUrl != null) {
-        	decodedJwt = JWT.decode(token);
-        	try {
-	        	//verify signature, audience and exp
-	        	JwkProvider provider = new UrlJwkProvider(new URL(jwksUrl));
-	            Jwk jwk = provider.get(decodedJwt.getKeyId());
+		JwkProvider provider = s_jwkProviderCache.get(wellKnownUrl);
+		
+		if (provider == null) {
+			//get jwks from openid configuration endpoint
+			String jwksUrl = null;
+	        HttpClient httpClient = HttpClient.newBuilder()
+	        		.connectTimeout(java.time.Duration.ofSeconds(10))
+	        		.build();
+	        HttpRequest request = HttpRequest.newBuilder()
+	                .uri(URI.create(wellKnownUrl))
+	                .timeout(java.time.Duration.ofSeconds(30))
+	                .GET()
+	                .build();
 	
-	            Algorithm algorithm = Algorithm.RSA256((RSAPublicKey) jwk.getPublicKey(), null);
-	            Verification verification = JWT.require(algorithm)
-						  .acceptExpiresAt(0)
-						  .withIssuer(getOIDC_IssuerURL());
-	            Claim aud = decodedJwt.getClaim("aud");
-	            if (isWithStringValue(aud)) {
-	            	verification.withAudience(getOIDC_Audience());
+	        try {
+	            HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
+	
+	            // Parse the JSON response
+	            JsonObject json = new Gson().fromJson(response.body(), JsonObject.class);
+	
+	            // Extract the JWKS URL
+	            if (json.has("jwks_uri") && !json.get("jwks_uri").isJsonNull()) {
+	            	jwksUrl = json.get("jwks_uri").getAsString();
 	            } else {
-	            	Claim client_id = decodedJwt.getClaim("client_id");
-	            	 if (isWithStringValue(client_id))
-	            		 verification.withClaim("client_id", getOIDC_Audience());
+	            	throw new JWTVerificationException("Configuration endpoint did not return jwks_uri");
 	            }
-	            JWTVerifier verifier = verification.build();
-	            decodedJwt = verifier.verify(decodedJwt);
-            } catch (JWTVerificationException | JwkException | MalformedURLException e) {
-            	if (e instanceof JWTVerificationException)
-            		throw (JWTVerificationException)e;
-            	else
-            		throw new JWTVerificationException(e.getMessage(), e);
+	        } catch (IOException | InterruptedException e) {
+	        	if (e instanceof InterruptedException) {
+	        		Thread.currentThread().interrupt();
+	        	}
+	        	throw new JWTVerificationException(e.getMessage(), e);            
+	        }
+	        
+	        if (jwksUrl != null) {
+	        	try {
+					provider = new UrlJwkProvider(new URL(jwksUrl));
+					s_jwkProviderCache.put(wellKnownUrl, provider);
+				} catch (MalformedURLException e) {
+					throw new JWTVerificationException(e.getMessage(), e);
+				}
+	        } else {
+	        	throw new JWTVerificationException("Failed to retrieve jwks_uri from Configuration URL");
+	        }
+		}
+        
+        DecodedJWT decodedJwt = JWT.decode(token);
+    	try {
+        	//verify signature, audience and exp
+            Jwk jwk = provider.get(decodedJwt.getKeyId());
+
+            Algorithm algorithm = null;
+            String alg = decodedJwt.getAlgorithm();
+            if ("RS256".equals(alg)) {
+            	algorithm = Algorithm.RSA256((RSAPublicKey) jwk.getPublicKey(), null);
+            } else if ("RS384".equals(alg)) {
+            	algorithm = Algorithm.RSA384((RSAPublicKey) jwk.getPublicKey(), null);
+            } else if ("RS512".equals(alg)) {
+            	algorithm = Algorithm.RSA512((RSAPublicKey) jwk.getPublicKey(), null);
+            } else {
+            	throw new JWTVerificationException("Unsupported algorithm: " + alg);
             }
-        } else {
-        	throw new JWTVerificationException("Failed to retrieve jwks_uri from Configuration URL");
+
+            Verification verification = JWT.require(algorithm)
+					  .acceptExpiresAt(0)
+					  .withIssuer(getOIDC_IssuerURL());
+            Claim aud = decodedJwt.getClaim("aud");
+            if (isWithStringValue(aud)) {
+            	verification.withAudience(getOIDC_Audience());
+            } else {
+            	Claim client_id = decodedJwt.getClaim("client_id");
+            	 if (isWithStringValue(client_id))
+            		 verification.withClaim("client_id", getOIDC_Audience());
+            }
+            JWTVerifier verifier = verification.build();
+            decodedJwt = verifier.verify(decodedJwt);
+        } catch (JWTVerificationException | JwkException e) {
+        	if (e instanceof JWTVerificationException)
+        		throw (JWTVerificationException)e;
+        	else
+        		throw new JWTVerificationException(e.getMessage(), e);
         }
         
         return decodedJwt;
@@ -378,4 +424,30 @@ public class MOIDCService extends X_REST_OIDCService implements ImmutablePOSuppo
 			return null;
 		return getDecodedJWT(idToken);
 	}
+	
+	/**
+	 * Remove OAuth/OIDC token from authenticated cache
+	 * @param token the OAuth/OIDC token
+	 * @return true if token found and removed
+	 */
+	public static boolean revokeToken(String token) {
+		if (Util.isEmpty(token))
+			return false;
+		// Always add to revoke cache to handle race condition where token is being validated
+		// but not yet in auth cache.
+		s_revokeCache.put(token, Boolean.TRUE);
+		AuthenticatedUser authenticatedUser = s_authCache.remove(token);
+		if (authenticatedUser != null) {
+			int sessionId = authenticatedUser.getsessionId();
+			if (sessionId > 0) {
+				Env.setContext(Env.getCtx(), Env.AD_SESSION_ID, sessionId);		
+				MSession session = new MSession(Env.getCtx(), sessionId, null);
+				session.setWebSession(session.getWebSession() + "-logout");
+				session.logout();
+			}
+		}
+		
+		return authenticatedUser != null;
+	}
+	
 }
